--- a/index.html
+++ b/index.html
@@ -174,15 +174,17 @@
                         <div class="card">
                             <div class="box">
                                 <img src="images/mom.png" alt="">
-                                <div class="text">Mom Logistic</div>
-                                <P>MOM Logistic is an international Freight Forwarding and Consolidator company which is a leading transportation and LCL company in Surabaya and Semarang, Indonesia.
-                                     MOM Logistic was founded to meet customer needs for forwarding and consolidating. Currently, there are many freight forwarding and consolidating companies - unfortunately only a few of them have good professionalism, communication, and service, so we are here to answer the challenge. 
-                                     The MOM Logistic website is developed using the Javascript programming language with the NextJs framework and Laravel as a CSS styling tool. 
-                                     The MySQL database is used to store and manage incoming data. In developing this application, my focus is on the Front-end. The available features include the admin login feature, as well as the available display functions that allow users to feel comfortable using the website.
+                                <div class="text">Bulider.co</div>
+                                <P>
+                                    Builder.co is a website operating in the construction services sector, based in Nusa Tenggara Barat, Indonesia. The platform was developed using JavaScript as its core programming language, with a customized front-end built using Tailwind CSS and Bootstrap, 
+                                    while the back-end is powered by Node.js. The main purpose of Builder.co is to provide the local community, especially in Mataram, NTB, with access to references and services related to builders available in the region. By offering a centralized platform, 
+                                    the website helps connect residents with reliable construction professionals, making it easier to find skilled workers and trusted servic Beyond its technical foundation, Builder.co also aims to contribute to the local economy by promoting local craftsmanship and supporting small to medium-sized businesses in the construction industry. 
+                                    It serves not only as a directory of services but also as a digital solution that enhances accessibility, transparency, and efficiency in finding builder-related resources. In the long run, Builder.co envisions becoming a comprehensive hub for construction services in NTB, fostering collaboration between communities and professionals, 
+                                    and encouraging the adoption of digital platforms in traditional industries.
                                 </p>
-                                <p>Tech Stack : HTML, CSS, PHP, Bootstrap, JavaScript, Laravel, and MySql. </p>
+                                <p>Tech Stack : HTML, CSS, PHP, Bootstrap, JavaScript. </p>
                                 <div class="content-center">
-                                    <a href="https://github.com/ElangDGP/MOMLOGISTIC.git" target="_blank"><i
+                                    <a href="https://github.com/Frytrlksana/Project-Capstone" target="_blank"><i
                                             class="fas fa-code"></i> Code</a>
                                 </div>
                             </div>
@@ -190,118 +192,48 @@
                         <div class="card">
                             <div class="box">
                                 <img src="images/uhajj.png" alt="">
-                                <div class="text">Uhajj Gifts</div>
-                                <P>UHAJJ GIFTS Curation supports Indonesian MSMEs to penetrate export markets to Saudi Arabia, UAE, Qatar, Egypt, and Morocco. We offer product curation, meetings with potential buyers, free education, and assistance with exporter legality. Let's go global!.
-                                     The Uhajj Gifts website is developed using the Javascript programming language with the NextJs framework and Laravel as a CSS styling tool.
-                                      The MySQL database is used to store and manage incoming data. In developing this application, my focus is on the Front-end. The available features include the admin login feature, as well as the available display functions that allow users to feel comfortable using the website.</p>
-                                <p>Tech Stack : HTML, CSS, PHP, Bootstrap, JavaScript, Laravel, and MySql. </p>
-                                <div class="content-center">
-                                    <a href="https://github.com/ElangDGP/Uhajj.git" target="_blank"><i
-                                            class="fas fa-cube"></i>Code</a>
-                                </div>
+                                <div class="text">Nusantara Resto </div>
+                                <P>Nusantara Resto is a web-based application that focuses on providing recommendations and rating information for restaurants across Indonesia. The platform was developed using JavaScript as the primary programming language, with a custom front-end design built using Tailwind CSS and Bootstrap. For the back-end, the system is supported by the team at Dicoding Indonesia, utilizing JSON scripts on Node.js with the Express.js framework.
+                                The goal of Nusantara Resto is to make it easier for users to discover restaurants, compare ratings, and access detailed information about dining options throughout the country. By combining modern web technologies with a user-friendly interface, the application enhances the dining experience by helping people make informed choices.
+                                Beyond its technical aspects, Nusantara Resto also aims to promote culinary diversity in Indonesia by showcasing restaurants from different regions, encouraging exploration of local cuisines, and supporting the food and beverage industry through digital innovation. In the future, the platform envisions expanding its features to include personalized recommendations, user reviews, and integration with reservation or delivery services, making it a comprehensive hub for food enthusiasts nationwide.</p>
+                                <p>Tech Stack : HTML, CSS, PHP, Bootstrap, JavaScript, Express.js </p>
                             </div>
                         </div>
                         <div class="card">
                             <div class="box">
                                 <img src="images/Capture.PNG" alt="">
-                                <div class="text">$mall Cashier</div>
-                                <P>Small Cashier is a cashier website that is designed to help manage sales transactions
-                                    easily and efficiently. This website provides features features that simplify the
-                                    checkout process and shopping basket management using the jQuery library. In terms
-                                    of user features, Small Cashier allows users to checkout process quickly and
-                                    practically. Users can add products to the shopping cart by clicking on the add or
-                                    subtract button using the functions provided by jQuery. buttons using functions
-                                    provided by jQuery. This makes it easier for users to manage the number of products
-                                    they want to buy before doing the checkout process.</p>
-                                <p>Meanwhile, in terms of features for admins, Small Cashier provides CRUD (Create,
-                                    Read, Update, Delete) functions that allow admins to manage products easily. Admins
-                                    can add new products to the database, view a list of available products, change
-                                    product information, and delete products. available products, modify product
-                                    information, and delete products that are no longer needed. anymore. With this
-                                    feature, the admin can perform inventory management effectively and efficiently. and
-                                    efficiently. Small Cashier is the right solution for companies or small businesses
-                                    that need a reliable cashier system. companies or small businesses that need a
-                                    reliable and customisable cashier system. their needs.</p>
-                                <p>Tech Stack : HTML, CSS, PHP, MySql, JavaScript </p>
+                                <div class="text">Toko Kita</div>
+                                <P>Toko Kita is a web-based application designed to support the sale of food and beverages within a restaurant environment. The platform provides essential features such as customer and employee login systems, menu selection, and an integrated payment system. 
+                                    The website was developed using the Laravel framework with a custom front-end built using Tailwind CSS, while the primary programming language used is PHP. 
+                                    The purpose of Toko Kita is to streamline restaurant operations by offering a digital solution that enhances efficiency and improves customer experience. With its user-friendly interface and secure system, the application allows restaurants to manage orders, staff access, and transactions more effectively</p>
+                                <p>Tech Stack : HTML, CSS, PHP, MySql, Laravel </p>
                                 <div class="content-center">
-                                    <a href="https://github.com/ElangDGP/CASHIER.git" target="_blank"><i
+                                    <a href="https://github.com/Frytrlksana/Toko-Kita-V2" target="_blank"><i
                                             class="fas fa-code"></i> Code</a>
-                                    <a href="https://cashiersmall.000webhostapp.com/" target="_blank"><i
-                                            class="fas fa-eye"></i> Demo</a>
                                 </div>
                             </div>
                         </div>
                         <div class="card">
                             <div class="box">
                                 <img src="images/systempakar.PNG" alt="">
-                                <div class="text">Classification of Heart Disease expert system using certain factor
-                                    method</div>
-                                <p>The Lung Disease Diagnosis Expert System website is an online platform that uses the
-                                    Certainty Factor method to help users diagnose lung diseases. Users are asked to
-                                    select symptoms experienced through a user-friendly interface. The expert system
-                                    will analyse the selected symptoms and classify the type of lung disease that may be
-                                    experienced based on the certainty factor of each possible disease. The website
-                                    provides an easy and interactive user experience, allowing users to get a useful
-                                    initial diagnosis before consulting a medical professional.</p>
-                                <p>This expert system is very useful for individuals who suspect lung health problems.
-                                    By using the Certainty Factor method, users can obtain a more accurate diagnosis
-                                    based on the symptoms they select. The information presented on this website can
-                                    help users understand their health conditions better and provide initial guidance
-                                    before seeking medical help.</p>
-                                <p>Tech Stack : HTML, CSS, PHP, JavaScript, MySql, Bootstrap</p>
-                                <div class="content-center">
-                                    <a href="https://github.com/elangdmr/expertsystemm.git" target="_blank"><i
-                                            class="fas fa-code"></i> Code</a>
-                                </div>
+                                <div class="text">Mobile Application PROJO PAY</div>
+                                <p>Projopay is a digital application that offers a comprehensive set of PPOB (Payment Point Online Bank) features combined with an attractive and user-friendly interface. One of its standout functionalities is the transaction history feature, which not only allows users to track each transaction in detail but also helps them manage their finances more effectively. Users can easily review the date, amount, and recipient or sender details, making it useful for personal record-keeping as well as for evaluating spending and income patterns over a specific period.
+This feature enhances transparency and builds user trust by ensuring security and accountability in digital payment activities. In addition to its financial management capabilities, Projopay is technically developed with a front-end built using React Native and a back-end powered by Laravel, ensuring both flexibility and scalability in its performance.
+Looking ahead, Projopay aims to evolve into a more holistic financial platform by integrating advanced analytics, personalized insights, and broader payment options, making it not only a reliable tool for transactions but also a valuable companion for digital financial management
+</p>
+                                <p>Tech Stack : HTML, CSS, PHP, JavaScript, MySql, Bootstrap, React Native, Laravel</p>
                             </div>
                         </div>
                         <div class="card">
                             <div class="box">
                                 <img src="images/transupn.PNG" alt="">
-                                <div class="text">TransUPN</div>
-                                <p>Trans UPN is a website developed for transport management. This website is designed
-                                    to facilitate transport management by involving drivers in the process. Through
-                                    Trans UPN, drivers will receive a task to cover a certain distance and get a result
-                                    or income that corresponds to the length of the distance covered in kilometres. In
-                                    addition, Trans UPN also provides a revenue filter feature per day with different
-                                    driver data. This allows users to view and analyse the daily revenue of each driver
-                                    separately. This feature helps management in evaluating driver performance, as well
-                                    as making it easier to monitor and manage payroll efficiently.</p>
-                                <p>Tech Stack : HTML, CSS, PHP</p>
-                                <a href="https://github.com/ElangDGP/UTS-Pemweb-dan-PBO/tree/467f1e1120afe8ce30e8819c2f81e4ddc447320a/utspemweb" target="_blank"><i
-                                        class="fas fa-code"></i> Code</a>
+                                <div class="text">Haney Pet Shop</div>
+                                <p>Haney Pet Shop is a web-based application developed using the Laravel framework. The platform was created to make it easier for customers, especially animal lovers, to purchase essential products for their pets. With its intuitive design and accessible interface, Haney Pet Shop provides a convenient way for users to browse, select, and order pet supplies directly online.
+Beyond its core functionality, the application also aims to enhance the customer experience by offering features such as secure transactions, organized product categories, and responsive design for seamless use across devices. By digitizing the shopping process, Haney Pet Shop not only supports pet owners in fulfilling their needs more efficiently but also helps local businesses expand their reach through modern technology.
+</p>
+                                <p>Tech Stack : HTML, CSS, PHP, Laravel, Bootstrap</p>
                             </div>
                         </div>
-                        <div class="card">
-                            <div class="box">
-                                <img src="images/figmaa.png" alt="">
-                                <div class="text">UI/UX Desaign With Figma</div>
-                                <p>
-                                    FIFADVENTURE is a UI/UX design project that uses Figma application to create an
-                                    attractive user interface and intuitive user experience. The app is designed
-                                    specifically for tent rental, with users using the mobile app to browse the tent
-                                    catalogue, checkout, and receive notifications on the rental status. On the admin
-                                    side, there is a website that allows rental management, including viewing orders,
-                                    managing stock, and sending rental confirmations to users. With good design,
-                                    FIFADVENTURE aims to provide a pleasant experience for users and simplify the tent
-                                    rental process.
-                                </p>
-                                <div class="content-center">
-                                    <a href="https://www.figma.com/design/rKiEfa50kjixZ7jhs2lh2D/Expenses?node-id=0-1&t=XxUiRww2yeptkpOM-1"
-                                        target="_blank"><i class="fas fa-eye"></i> Link</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="box">
-                                <img src="images/lembahindah.png" alt="">
-                                <div class="text">Lembah Indah</div>
-                                <p>Lembah Indah is an outdoor equipment rental website that rents several tools such as tents, flashlights, portable stoves and many more. 
-                                    The Lembah Indah website is developed using the Javascript programming language with the NextJs framework and Laravel as a CSS styling tool.
-                                     The MySQL database is used to store and manage incoming data. In developing this application, my focus is on the Front-end. The available features include the admin login feature, as well as the available display functions that allow users to feel comfortable using the website.</p>
-                                     <div class="content-center">
-                                    <a href="https://github.com/ElangDGP/LembahIndah.git" target="_blank"><i
-                                            class="fas fa-cube"></i>Code</a>
                                 </div>
                             </div>
                         </div>
